# maildigger

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: release.ps1
src/maildigger/: __init__.py  __main__.py  attachments.py  auth.py  cli.py  fetch.py  output.py  parse.py  search.py
